progressed with monaco editor

--- a/NCloud/NCloud/Views/Editor/CodeEditor.cshtml
+++ b/NCloud/NCloud/Views/Editor/CodeEditor.cshtml
@@ -27,15 +27,15 @@
 
 <link rel="stylesheet"
       data-name="vs/editor/editor.main"
-      href="~/lib/monaco-editor/min/vs/editor/editor.main.css" />
+      href="~/monaco-editor/min/vs/editor/editor.main.css" />
 
 <script>
     var require = { paths: { vs: '/lib/monaco-editor/min/vs' } };
 </script>
 
-<script src="~/lib/monaco-editor/min/vs/loader.js"></script>
-<script src="~/lib/monaco-editor/min/vs/editor/editor.main.nls.js"></script>
-<script src="~/lib/monaco-editor/min/vs/editor/editor.main.js"></script>
+<script src="~/monaco-editor/min/vs/loader.min.js"></script>
+<script src="~/monaco-editor/min/vs/editor/editor.main.nls.js"></script>
+<script src="~/monaco-editor/min/vs/editor/editor.main.min.js"></script>
 
 @Html.AntiForgeryToken()
 
