--- a/NCloud/NCloud/Views/Shared/Components/CloudNotificationSingle/NotificationSingle.cshtml
+++ b/NCloud/NCloud/Views/Shared/Components/CloudNotificationSingle/NotificationSingle.cshtml
@@ -1,5 +1,5 @@
 ﻿
-<div class="toast-container position-sticky start-100 bottom-0 p-3">
+<div class="toast-container fixed-notifications p-3">
     <div class="toast bg-success" id="toast_success" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="5000">
         <div class="toast-header bg-success">
             <img src="/utilities/success.svg" class="rounded me-2">
