--- a/NCloud/NCloud/Views/Shared/Components/CloudNotification/Notification.cshtml
+++ b/NCloud/NCloud/Views/Shared/Components/CloudNotification/Notification.cshtml
@@ -9,7 +9,7 @@
 
 @if (queue is not null)
 {
-    <div class="toast-container position-sticky bottom-0 start-100 p-3">
+    <div class="toast-container fixed-notifications p-3">
         @foreach(CloudNotificationAbstarct notification in queue)
         {
             <div class="toast @(notification.Color)" id="notification_multiple" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="5000">
