started to elaborate folder settings (view, service, controller)

--- a/NCloud/NCloud/Views/Shared/Components/DriveDetailsTable/Table.cshtml
+++ b/NCloud/NCloud/Views/Shared/Components/DriveDetailsTable/Table.cshtml
@@ -105,7 +105,7 @@
                             </fieldset>
                             <div class="d-flex justify-content-end">
                                 <div class="btn-group mx-2" role="group">
-                                    <a asp-controller="Drive" class="btn btn-primary " asp-action="Settings" asp-route-id="@item.Info.Name"><img src="~/utilities/gear.svg" width=" 20" height="20" class="rounded align-middle" /></a>
+                                    <a asp-controller="Drive" class="btn btn-primary" asp-action="FolderSettings" asp-route-folderName="@item.Info.Name"><img src="~/utilities/gear.svg" width=" 20" height="20" class="rounded align-middle" /></a>
 
                                     <button class="btn btn-secondary @(item.IsConnectedToWeb ? "" : "hidden")" id="@(counter)_btnDisConnectDirWeb" type="button" onclick="disConnectDirectoryFromWeb('@Url.Action("DisConnectDirectoryFromWeb", "Drive")', '@item.Info.Name', '@counter')">
                                         <img src="~/utilities/nopublic.svg" width="20" height="20" class="rounded align-middle" id="@(counter)_logo_1" />
@@ -244,7 +244,7 @@
                             </fieldset>
                             <div class="d-flex justify-content-end">
                                 <div class="btn-group mx-2" role="group">
-                                    <a asp-controller="Drive" class="btn btn-primary" asp-action="Settings" asp-route-id="@item.Info.Name"><img src="~/utilities/gear.svg" width=" 20" height="20" class="rounded align-middle" /></a>
+                                    <a asp-controller="Drive" class="btn btn-primary" asp-action="FileSettings" asp-route-fileName="@item.Info.Name"><img src="~/utilities/gear.svg" width=" 20" height="20" class="rounded align-middle" /></a>
 
                                     <button class="btn btn-secondary @(item.IsConnectedToWeb ? "" : "hidden")" id="@(counter)_btnDisConnectFileWeb" type="button" onclick="disConnectFileFromWeb('@Url.Action("DisConnectFileFromWeb", "Drive")', '@item.Info.Name', '@counter')">
                                         <img src="~/utilities/nopublic.svg" width="20" height="20" class="rounded align-middle" id="@(counter)_logo_1" />
@@ -274,7 +274,6 @@
                                         </div>
                                     </button>
 
-                                    <button type="button" class="btn btn-secondary"></button>
                                     <a asp-controller="Drive" class="btn btn-secondary" asp-action="DownloadFile" asp-route-fileName="@item.Info.Name"><img src="~/utilities/cloud-download.svg" width=" 20" height="20" class="rounded align-middle" download /></a>
                                     <a asp-controller="Editor" class="btn btn-secondary" asp-action="EditorHub" asp-route-fileName="@item.Info.Name"><img src="~/utilities/editor-general.svg" width=" 20" height="20" class="rounded align-middle" /></a>
                                     <a asp-controller="Drive" class="btn btn-danger" asp-action="DeleteFile" asp-route-fileName="@item.Info.Name"><img src="~/utilities/trash.svg" width=" 20" height="20" class="rounded align-middle" /></a>
