--- a/NCloud/NCloud/Views/Drive/FolderSettings.cshtml
+++ b/NCloud/NCloud/Views/Drive/FolderSettings.cshtml
@@ -3,14 +3,15 @@
 <div class="container-fluid d-flex justify-content-center align-items-center min-vh-100">
     <div class="row">
         <div class="col">
-            <h3>@String.Join(Constants.PathSeparator, Model.Path, Model.Name)</h3>
+            <h3>@String.Join(Constants.PathSeparator, Model.Path, Model.OldName)</h3>
         </div>
         <div class="col">
             <form asp-action="FileSettings">
                 <input type="hidden" asp-for="Path" class="form-control" />
+                <input type="hidden" asp-for="OldName" class="form-control" />
                 <div class="form-group">
-                    <label asp-for="Name"></label>
-                    <input asp-for="Name" class="form-control" />
+                    <label asp-for="OldName"></label>
+                    <input asp-for="OldName" class="form-control" />
                 </div>
                 <div class="form-group my-3">
                     <label asp-for="ConnectedToApp"></label>
@@ -25,8 +26,8 @@
                 </div>
             </form>
             <div class="col input-group">
-                <a asp-controller="Drive" class="btn btn-primary" asp-action="DownloadFolder" asp-route-folderName="@Model.Name"><img src="~/utilities/cloud-download.svg" width=" 20" height="20" class="rounded align-middle" download /></a>
-                <a asp-controller="Drive" class="btn btn-danger" asp-action="DeleteFolder" asp-route-folderName="@Model.Name"><img src="~/utilities/trash.svg" width=" 20" height="20" class="rounded align-middle" /></a>
+                <a asp-controller="Drive" class="btn btn-primary" asp-action="DownloadFolder" asp-route-folderName="@Model.OldName"><img src="~/utilities/cloud-download.svg" width=" 20" height="20" class="rounded align-middle" download /></a>
+                <a asp-controller="Drive" class="btn btn-danger" asp-action="DeleteFolder" asp-route-folderName="@Model.OldName"><img src="~/utilities/trash.svg" width=" 20" height="20" class="rounded align-middle" /></a>
             </div>
         </div>
     </div>
