--- a/NCloud/NCloud/Views/Drive/FileSettings.cshtml
+++ b/NCloud/NCloud/Views/Drive/FileSettings.cshtml
@@ -1,7 +1,7 @@
-﻿@model FolderSettingsViewModel
+﻿@model FileSettingsViewModel
 
 @{
-    ViewData["Title"] = "Folder Settings";
+    ViewData["Title"] = "File Settings";
 }
 
 <div class="d-flex justify-content-between w-100 bg-primary rounded mb-3">
@@ -14,12 +14,16 @@
             <h3 class="fw-bold">@String.Join(Constants.PathSeparator, Model.Path, Model.OldName)</h3>
         </div>
         <div class="col-12">
-            <form asp-action="FolderSettings">
+            <form asp-action="FileSettings">
                 <input type="hidden" asp-for="Path" class="form-control" />
                 <input type="hidden" asp-for="OldName" class="form-control" />
+                <input type="hidden" asp-for="Extension" class="form-control" />
                 <div class="form-group">
                     <label asp-for="NewName"></label>
-                    <input asp-for="NewName" class="form-control" />
+                    <div class="input-group">
+                        <input asp-for="NewName" class="form-control" />
+                        <span class="input-group-text">@Model.Extension</span>
+                    </div>
                 </div>
                 <div class="form-check my-3">
                     <input class="form-check-input" asp-for="ConnectedToApp" class="form-check" />
@@ -32,30 +36,38 @@
                 <div class="d-flex w-100 mt-3">
                     <table class="table table-striped rounded">
                         <tr>
-                            <td class="ps-3 w-25 text-break">
+                            <td class="ps-3">
                                 Created By
                             </td>
-                            <td class="text-break">
+                            <td>
                                 @User.Identity?.Name
                             </td>
                         </tr>
                         <tr>
-                            <td class="ps-3 w-25 text-break">
+                            <td class="ps-3">
                                 Created Time
                             </td>
-                            <td class="text-break">
+                            <td>
                                 @Model.Info!.CreationTime
                             </td>
                         </tr>
                         <tr>
-                            <td class="ps-3 w-25 text-break">
+                            <td class="ps-3">
                                 Last Modified Time
                             </td>
-                            <td class="text-break">
+                            <td>
                                 @Model.Info.LastWriteTime
                             </td>
                         </tr>
-                    </table>
+                        <tr>
+                            <td class="ps-3">
+                                Size
+                            </td>
+                            <td>
+                                @FileSizeManager.ConvertToReadableSize(Model.Info.Length)
+                            </td>
+                        </tr>
+                        </table>
                 </div>
                 <div class="d-flex w-100 justify-content-center">
                     <button type="submit" class="btn btn-primary">Save</button>
