--- a/NCloud/NCloud/Views/Shared/Components/DriveDetailsTable/Table.cshtml
+++ b/NCloud/NCloud/Views/Shared/Components/DriveDetailsTable/Table.cshtml
@@ -4,7 +4,6 @@
     int counter = 0;
 }
 
-@Html.AntiForgeryToken()
 <table class="table">
     <thead>
         <tr>
@@ -135,7 +134,8 @@
                                         </div>
                                     </button>
 
-                                    <a asp-controller="Drive" class="btn btn-secondary" asp-action="DownloadFolder" asp-route-folderName="@item.Info.Name"><img src="~/utilities/cloud-download.svg" width=" 20" height="20" class="rounded align-middle" download /></a>
+                                    <button type="button" class="btn btn-secondary" onclick="copyItemToCloudClipBoard('@Url.Action("CopyFolderToCloudClipboard","Drive")','@item.Info.Name')"><img src="~/utilities/copy.svg" width=" 20" height="20" class="align-middle"/></button>
+                                    <a asp-controller="Drive" class="btn btn-secondary" asp-action="DownloadFolder" asp-route-folderName="@item.Info.Name" download><img src="~/utilities/cloud-download.svg" width=" 20" height="20" class="rounded align-middle"/></a>
                                     <a asp-controller="Drive" class="btn btn-danger" asp-action="DeleteFolder" asp-route-folderName="@item.Info.Name"><img src="~/utilities/trash.svg" width=" 20" height="20" class="rounded align-middle" /></a>
                                 </div>
                             </div>
@@ -274,7 +274,8 @@
                                         </div>
                                     </button>
 
-                                    <a asp-controller="Drive" class="btn btn-secondary" asp-action="DownloadFile" asp-route-fileName="@item.Info.Name"><img src="~/utilities/cloud-download.svg" width=" 20" height="20" class="rounded align-middle" download /></a>
+                                    <button type="button" class="btn btn-secondary" onclick="copyItemToCloudClipBoard('@Url.Action("CopyFileToCloudClipboard","Drive")','@item.Info.Name')"><img src="~/utilities/copy.svg" width=" 20" height="20" class="align-middle"/></button>
+                                    <a asp-controller="Drive" class="btn btn-secondary" asp-action="DownloadFile" asp-route-fileName="@item.Info.Name" download><img src="~/utilities/cloud-download.svg" width=" 20" height="20" class="rounded align-middle"/></a>
                                     <a asp-controller="Editor" class="btn btn-secondary" asp-action="EditorHub" asp-route-fileName="@item.Info.Name"><img src="~/utilities/editor-general.svg" width=" 20" height="20" class="rounded align-middle" /></a>
                                     <a asp-controller="Drive" class="btn btn-danger" asp-action="DeleteFile" asp-route-fileName="@item.Info.Name"><img src="~/utilities/trash.svg" width=" 20" height="20" class="rounded align-middle" /></a>
                                 </div>
@@ -286,6 +287,8 @@
         }
     </tbody>
 </table>
+
+@Html.AntiForgeryToken()
 
 @if(Model.Files?.Count == 0 && Model.Folders?.Count == 0)
 {
