ls and cd commands made

--- a/NCloud/NCloud/Views/Drive/Details.cshtml
+++ b/NCloud/NCloud/Views/Drive/Details.cshtml
@@ -17,7 +17,7 @@
             </nav>
         </div>
         <div class="input-group hidden" id="fastInputDiv">
-            <input type="text" class="form-control py-3" name="commandLine" id="currentPath" value="@Model.CurrentPathShow" />
+            <input type="text" class="form-control py-3" name="command" id="currentPath" value="@Model.CurrentPathShow" />
             <button type="submit" value="" class="btn btn-primary" form="pathform" id="fastInputBtn"><img src="~/utilities/arrow-right-circle.svg" width=" 20" height="20" class="rounded-circle align-middle" /></button>
         </div>
     </form>
