--- a/NCloud/NCloud/Views/Terminal/Index.cshtml
+++ b/NCloud/NCloud/Views/Terminal/Index.cshtml
@@ -1,5 +1,9 @@
 ﻿@model TerminalViewModel
 
+@{
+    ViewData["Title"] = " Cloud Terminal";
+}
+
 <div class="w-100 h-100 d-flex justify-content-center">
     <div class="terminal space shadow w-75 terminalstyle">
         <div class="top">
@@ -8,7 +12,7 @@
                 <span class="circle yellow"></span>
                 <span class="circle green"></span>
             </div>
-            <div class="title">CloudShell</div>
+            <div class="title">Cloud Terminal</div>
         </div>
         <div class="body h-100" id="terminal"></div>
         @Html.AntiForgeryToken()
@@ -16,25 +20,41 @@
 </div>
 
 <link rel="stylesheet" href="~/lib/jquery.terminal/css/jquery.terminal.min.css" />
-<script src="~/lib/jquery.terminal/js/jquery.terminal.min.js"></script>
-<script src="~/js/terminal.js"></script>
 
-<script>
-    jQuery(function ($, undefined) {
-        $('#terminal').terminal(async function (command) {
-            if (command !== '') {
-                if (command.toLowerCase() === 'exit') {
-                    window.open('@Url.Action("Details","Drive")','_self');
-                    return;
+@section Scripts {
+
+    <script src="~/lib/jquery.terminal/js/jquery.terminal.min.js"></script>
+    <script src="~/js/terminal.js"></script>
+
+    <script type="text/javascript">
+        jQuery(function ($, undefined) {
+
+            $('#terminal').terminal(async function (command) {
+
+                if (command !== '') {
+
+                    if (command === 'exit') {
+                        window.open('@Url.Action("Details","Drive")', '_self');
+
+                        return;
+                    }
+
+                    terminal = new TerminalCommand;
+
+                    var result = await terminal.eval(command, "@Url.Action("Evaluate","Terminal")");
+
+                    this.echo(`${result.result}${result.message}`);
+
+                    if (result.payload !== "") {
+                        this.set_prompt(`${result.payload}> `);
+                    }
                 }
-                terminal = new TerminalCommand;
-                var result = await terminal.eval(command.toLowerCase(), "@Url.Action("Evaluate","Terminal")", document.querySelector('input[name="__RequestVerificationToken"]').value)
-                this.echo(result)
-            }
-        }, {
-            greetings: 'Hello User',
-            prompt: '@Model.CurrentDirectory> ',
-            checkArity: false
+            },
+                {
+                    greetings: 'Hello @User.Identity!.Name',
+                    prompt: '@Model.CurrentDirectory> ',
+                    checkArity: false
+                });
         });
-    });
-</script>
+    </script>
+}
